force-app/main/default/objects/Stage__c/fields/ConditionLogic__c.field-meta.xml
<CustomField>
    <fullName>ConditionLogic__c</fullName>
    <label>Condition Logic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>AND</fullName><default>true</default><label>AND — all conditions must match</label></value>
            <value><fullName>OR</fullName><default>false</default><label>OR — any condition must match</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>