force-app/main/default/objects/Stage__c/fields/ConditionsConfig__c.field-meta.xml
<CustomField>
    <fullName>ConditionsConfig__c</fullName>
    <label>Conditions Config</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>