force-app/main/default/objects/Stage__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>MasterDetail</type>
    <referenceTo>Process__c</referenceTo>
    <relationshipLabel>Stages</relationshipLabel>
    <relationshipName>Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>