force-app/main/default/objects/Stage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <label>All Stages</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Process__c</columns>
    <columns>Sequence__c</columns>
    <columns>CREATED_DATE</columns>
</ListView>